# afa

./: .gitignore  LICENSE  README.md  pyproject.toml
actflow/: __init__.py  cli.py
actflow/flow/: __init__.py  dag.py  flow.py
actflow/registry/: __init__.py
actflow/runtime/: __init__.py  runtime.py  trace.py
actflow/schema/: __init__.py  action_def.py
actflow/value/: __init__.py  curves.py  mapper.py
examples/customer_service/: flow.py
examples/daily_life/: flow.py
examples/daily_work/: flow.py
