[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actflow"
version = "0.1.0"
description = "ActionFlow — Stateful Agent Action Runtime. OpenAPI for Agent Actions + Airflow for Agent Workflows + Stripe for Agent Value Tracking."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AXA-Bench Lab"}]
keywords = ["agent", "workflow", "action", "runtime", "state", "vla"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[project.scripts]
actflow = "actflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["actflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--tb=short", "-q"]
